добавил решение задачи 2